testdata/baselines/reference/submodule/compiler/noParameterReassignmentIIFEAnnotated.errors.txt
index.js(6,36): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
index.js(6,42): error TS2345: Argument of type 'IArguments' is not assignable to parameter of type 'string[]'.
  Type 'IArguments' is missing the following properties from type 'string[]': pop, push, concat, join, and 23 more.


==== index.js (2 errors) ====
    self.importScripts = (function (importScripts) {
        /**
         * @param {...unknown} rest
         */
        return function () {
            return importScripts.apply(this, arguments);
                                       ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
                                             ~~~~~~~~~
!!! error TS2345: Argument of type 'IArguments' is not assignable to parameter of type 'string[]'.
!!! error TS2345:   Type 'IArguments' is missing the following properties from type 'string[]': pop, push, concat, join, and 23 more.
        };
    })(importScripts);
    